<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TAG</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="total_incoming">Total Incoming : 0</string>
    <string name="total_outgoing">Total Outgoing : 0</string>
    <string name="minus_symbol">-</string>
	<string name="plus_symbol">+</string>
	<string name="test_1">"1. "</string>
	<string name="sign_up">Sign Up</string>
	<string name="Amount">Amount</string>
	<string name="Enter_Name">Enter Name</string>
	<string name="enter_date">Enter Date</string>
	<string name="amount">Amount</string>
	<string name="name">Name</string>
	<string name="date">Date</string>
    
</resources>
