<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context=".HomeActivity" >

    <LinearLayout
        android:id="@+id/linearLayoutStatic"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/linearLayoutStaticText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginTop="4dp"

            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewIncoming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="@string/total_incoming" />

            <TextView
                android:id="@+id/textViewOutgoing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="@string/total_outgoing" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutStaticButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/buttonMinus"
                android:layout_width="50dp"
                android:layout_height="50dp"

                android:background="@drawable/minus"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/buttonPlus"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/plus"/>

        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linearLayoutStatic"
        android:fillViewport="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tableRowHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:background="@drawable/hollow_shape">

                <TextView
                    android:id="@+id/nameHeader"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/name"
                    android:gravity="center_horizontal"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/amountHeader"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/amount"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/dateHeader"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/date"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>
    </ScrollView>

</RelativeLayout>